--- a/_posts/stories/2017-11-08-yosemite.markdown
+++ b/_posts/stories/2017-11-08-yosemite.markdown
@@ -23,13 +23,13 @@ images:
 
 Когда к нам приехала Даша, которая совсем недавно пробежала свой первый марафон, мы поняли, что лучше момента не будет. Надо брать Дашу и ехать. Так мы и сделали.
 
-Мы выехали в пятницу в 7 вечера. Ехать было около 260 километров, и к ночи мы были в гостинице. Мы остановились в Yosemite Cedar Lodge. Эта гостиница/мотель находится всего в 15 минутах езды до въезда в парк. На территории парка останавливаться не только безумно дорого, но еще и очень сложно: гостиницу необходимо бронировать ооочень заранее.
+Мы выехали в пятницу в 7 вечера. Ехать было около 260 километров, и к ночи мы были в гостинице. Мы остановились в *Yosemite Cedar Lodge*. Эта гостиница/мотель находится всего в 15 минутах езды до въезда в парк. На территории парка останавливаться не только безумно дорого, но еще и очень сложно: гостиницу необходимо бронировать ооочень заранее.
 
 Приехали мы затемно. Выйдя из машины, мы услышали журчание реки Merced River. Небо было просто усыпано звездами и слышно было сверчков. Температура тоже отличалась от привычной. Днем в Сан Франциско было около 25°C, а вечером в Yosemite 4°C. Но воздух! Воздух совершенно другой. Я совсем не жалуюсь на воздух в городе, но в Yosemite, сразу чувствуешь, что ты в горах! Хотелось просто постоять и подышать полной грудью.
 
 Во время регистрации в гостинице мы обнаружили еще одну особенность: интернет в гостинице платный. А все это потому, что мобильная сеть там в принципе не ловит, так что о интернете речи и не могло быть. К этому мы были не готовы. Карты заранее не загрузили, родителей не предупредили. =) Так что будущие туристы - имейте в виду! Предупрежден - значит вооружен!
 
-На следующее утро мы постарались выехать рано. На въезде в парк (Arch Rock Entrance) нас все-равно ждала очередь. Двигалась она довольно быстро, но лишний раз напомнила как американцы любят "пешеходный туризм".
+На следующее утро мы постарались выехать рано. На въезде в парк (*Arch Rock Entrance*) нас все-равно ждала очередь. Двигалась она довольно быстро, но лишний раз напомнила как американцы любят "пешеходный туризм".
 
 Выше я упоминала невероятные размеры Национального парка. Долина Йосемите занимает только один процент от общей территории всего Йосемите, однако, именно туда стекается большинство посетителей. И мы оказались в их числе.
 
@@ -42,66 +42,38 @@ images:
 
 Считается, что в результате эрозии различных горных пород, испытавших тектоническое поднятие и сопутствующих этому разломов, и появились долины, каньоны, куполовидные складки и другие формы рельефа Yosemite.
 
-Оказавшись в парке в начале десятого, мы поехали по Southside Dr. и практически сразу увидели величественную гору El Capitan.
+Оказавшись в парке в начале десятого, мы поехали по **Southside Dr**. и практически сразу увидели величественную гору **El Capitan**. Сразу захотелось посмотреть поближе и, взяв бинокль, мы увидели несколько цветных точек. Это были скалолазы. Человек 5. По, казалось бы, совершенно плоскому отвесу горы они взбирались вверх. Это, конечно, меня очень потрясло. Первый раз я увидела, как это происходит по-настоящему.
+
+По другую сторону от El Capitan мы увидели наш первый водопад в Yosemite - **Bradalveil Fall**. Очень романтичное название, переводится как "Фата невесты". Водопады - это, конечно, завораживающее зрелище! Смотреть на них можно бесконечно.
+
+Проехав немного дальше, мы хотели остановиться у начала маршрута, ведущего к **Glacier Point**. Это один из довольно сложных "хайков", но очень популярный и красивый.
+Однако, этому не суждено было сбыться. Припарковаться было негде. Мы поехали дальше, надеясь оставить машину с другой стороны реки Merdec, но ни на парковке у Visitor Center, ни у Yosemite Falls мест не было. К этому моменту было около 10-11 утра.
+
+В общем, мы решили не отчаиваться. Встать в воскресение пораньше и забраться на **Yosemite Falls**. А пока, поехали по Big Oak Flat Road на север. Мы ехали все дальше, долина Yosemite становилась все меньше, а облака ближе. Я не посоветую конкретных мест, но скажу, что останавливаться стоит в любом понравившемся месте (благо тут уже с парковкой проблем совсем нет).
+Мы останавливались у одного из мостов, проходящего над горной рекой, забирались под него и на камнях обедали. И скажу, что это был один из самых потрясающих обедов в моей жизни!
+Мы ходили смотреть на сиквойи - одни из самых высоких деревьев на планете.
+Мы заехали так высоко в горы, что вокруг появился снег, а голова закружилась до такой степени, что пришлось ехать обратно.
+Мы встретили потрясающий закат на одной из гор... и усталые, но счастливые легли спать.
+
+Так закончился наш первый день в Yosemite.
+
+В воскресение мы приехали в парк рано и припарковали машину! Ура!
+За один день по покорили две горы. Ну или почти покорили =) Мы поднялись до середины **Yosemite Fall**, откуда нам открылся вид на El Capitan и всю долину Yosemite.
+А поднявшись на самый верх **Vernal Falls**, мы увидели **Nevada Falls** и **Half Dome**.
+Это были не самые простые подъемы. А спускаться было очень страшно (и скользко). Но когда видишь пожилых людей, радостно забирающихся в гору или женщин, гордо говорящих, что у них уже 7ой месяц беременности, то понимаешь, что и тебе всё ни по чем!
 
 
+Если подводить итог: Yosemite потрясает. Потрясает своим масштабом, невероятными видами, природой, воздухом и энергетикой! Сюда можно приезжать очень много раз и открывать все новые и новые места!
 
-
-Советы путешественникам:
+**Советы путешественникам:**
 * позаботьтесь об офлайн картах заранее
 * приезжайте в парк как можно раньше (9-10 утра - это уже поздно). C парковкой у Yosemite Falls, Glacier point и Visitor Center в такое время уже могут быть проблемы.
-* удобная и несколькая обувь обязательна! если есть проблемы с коленями, то лучше взять с собой наколенники, спуски с гор могут быть очень резким и и длинными. Берегите ноги!
+* удобная и не сколькая обувь обязательна! если есть проблемы с коленями, то лучше взять с собой наколенники, спуски с гор могут быть очень резким и и длинными. Берегите ноги!
 * здесь сильно прохладнее, чем в Сан Франциско. Если днем на солнце и будет очень жарко, то к вечеру вы почувствуете настоящий холод. Берите побольше одежды с собой.
 * еда! в Visitor Center есть кафешка, в которой можно покушать. Но вы не захотите быть к ней привязаны, поэтому для свободы передвижения - берите побольше еды с собой. Ну и побольше снэков. Они спасают!
-* если планируете посетить больше 2 национальных парков за год - берите годовой абонемент
+* если планируете посетить больше 2 национальных парков по всей Америке за год - берите годовой абонемент
 
 
-
-
-
- высота от 2000 до 13 000 feet
-высота варьируется от 600 до 3900 метров над уровнем моря,
-3.5 миллиона туристов ежегодно
-
-Напомню, что хайкинг (все-таки давайте я буду называть его так) - это национальное развлечение в Америке.
-
-
-
-
-
-
-
-
-
- By the end of the Cretaceous Period, about 65 million years
-ago, the granitic core was exposed due to deep erosion that removed the overlying
-sedimentary rock and fbrmed a landscape of gentle rolling hills. About 25 million years
-ago, this lowland area began to uplifi and tilt toward the southwest. As the Sierra rose,
-the streams fbllowing into Califomia's Central Valley flowed faster and cut deep Vshaped
-canyons into the mountains.
-T'he first Ice Age began about two million years ago. Glaciers that tbrmed in the High
-Sierra moved through Yosemite Valley.
-
-Yosemite Valley was home to the Miwok Indians who fbr 8,000 years migrated fiom the
-Sierra foothills to the Valley and to the alpine meadows in the summer months. They
-called themselves the "Ahwahneechee," the people who lived in "Ahwahnee.
-
-
+Я оставлю здесь фотографии. Не поленитесь, посмотрите на большом экране, это передаст вам хоть немного тех ощущений!
 
 <!--{% include image src="" %}-->
-
-
-
-
-
-Yosemite is internationally recognized for its granite cliffs, waterfalls, clear streams, giant sequoia groves, lakes, mountains, glaciers, and biological diversity.[7] Almost 95% of the park is designated wilderness.[8]
-
-
-Yosemite was central to the development of the national park idea. First, Galen Clark and others lobbied to protect Yosemite Valley from development, ultimately leading to President Abraham Lincoln's signing the Yosemite Grant in 1864. Later, John Muir led a successful movement to establish a larger national park encompassing not just the valley, but surrounding mountains and forests as well—paving the way for the U.S. National Park system.[10]
-Yosemite is one of the largest and least fragmented habitat blocks in the Sierra Nevada, and the park supports a diversity of plants and animals. The park has an elevation range from 2,127 to 13,114 feet (648 to 3,997 m) and contains five major vegetation zones: chaparral/oak woodland, lower montane forest, upper montane forest, subalpine zone, and alpine. Of California's 7,000 plant species, about 50% occur in the Sierra Nevada and more than 20% within Yosemite. There is suitable habitat for more than 160 rare plants in the park, with rare local geologic formations and unique soils characterizing the restricted ranges many of these plants occupy.[7]
-
-
-
-
-
-The California Gold Rush in the mid-19th century dramatically increased travel by European-Americans in the area, causing competition for resources between the regional Paiute and Miwok and the miners and hangers on.
