--- a/_posts/stories/2017-11-08-yosemite.markdown
+++ b/_posts/stories/2017-11-08-yosemite.markdown
@@ -13,8 +13,8 @@ images:
 Это всё - Йосемите!
 
 В него мы и отправились в одни из сентябрьских выходных!
-<!-- И да, не бойтесь читать дальше. Так много цифр больше не будет! -->
 <!--separate--> 
+{% include image src="img_3314.jpg" %}
 
 Стоит заметить, что к этой поездке мы начали готовиться практически сразу после нашего переезда. Ну как готовиться? Морально!
 Мы знали, что Йосемите - обязательное место для посещения, что он потрясает, и нам обязательно туда надо съездить. Также мы знали, что главное занятие в нем - это хайкинг.
@@ -23,17 +23,25 @@ images:
 
 Когда к нам приехала Даша, которая совсем недавно пробежала свой первый марафон, мы поняли, что лучше момента не будет. Надо брать Дашу и ехать. Так мы и сделали.
 
+{% include image src="img_3459.jpg" %}
+
 Мы выехали в пятницу в 7 вечера. Ехать было около 260 километров, и к ночи мы были в гостинице. Мы остановились в *Yosemite Cedar Lodge*. Эта гостиница/мотель находится всего в 15 минутах езды до въезда в парк. На территории парка останавливаться не только безумно дорого, но еще и очень сложно: гостиницу необходимо бронировать ооочень заранее.
 
 Приехали мы затемно. Выйдя из машины, мы услышали журчание реки Merced River. Небо было просто усыпано звездами и слышно было сверчков. Температура тоже отличалась от привычной. Днем в Сан Франциско было около 25°C, а вечером в Yosemite 4°C. Но воздух! Воздух совершенно другой. Я совсем не жалуюсь на воздух в городе, но в Yosemite, сразу чувствуешь, что ты в горах! Хотелось просто постоять и подышать полной грудью.
+
+{% include image src="img_3222.jpg" %}
 
 Во время регистрации в гостинице мы обнаружили еще одну особенность: интернет в гостинице платный. А все это потому, что мобильная сеть там в принципе не ловит, так что о интернете речи и не могло быть. К этому мы были не готовы. Карты заранее не загрузили, родителей не предупредили. =) Так что будущие туристы - имейте в виду! Предупрежден - значит вооружен!
 
 На следующее утро мы постарались выехать рано. На въезде в парк (*Arch Rock Entrance*) нас все-равно ждала очередь. Двигалась она довольно быстро, но лишний раз напомнила как американцы любят "пешеходный туризм".
 
+
+
 Выше я упоминала невероятные размеры Национального парка. Долина Йосемите занимает только один процент от общей территории всего Йосемите, однако, именно туда стекается большинство посетителей. И мы оказались в их числе.
 
 На этом одном проценте территории расположилось такое количество гор, водопадов и водоемов, что и за два дня их не посмотреть.
+
+
 
 Если немного углубиться в историю, то считается, что первые живые существа появились здесь около 3000 лет назад. А первые люди - от 8000 до 10000 лет назад.
 До того, как на этой территории появились первые европейцы, здесь жили индейские племена сьерра-мивок и паюты. Ко времени прихода сюда первых поселенцев, в долине Йосемити обитала группа индейцев, называвшая себя аваничи (Ahwahnechee)
@@ -44,16 +52,27 @@ images:
 
 Оказавшись в парке в начале десятого, мы поехали по **Southside Dr**. и практически сразу увидели величественную гору **El Capitan**. Сразу захотелось посмотреть поближе и, взяв бинокль, мы увидели несколько цветных точек. Это были скалолазы. Человек 5. По, казалось бы, совершенно плоскому отвесу горы они взбирались вверх. Это, конечно, меня очень потрясло. Первый раз я увидела, как это происходит по-настоящему.
 
+{% include image src="img_3248.jpg" %}
+
 По другую сторону от El Capitan мы увидели наш первый водопад в Yosemite - **Bradalveil Fall**. Очень романтичное название, переводится как "Фата невесты". Водопады - это, конечно, завораживающее зрелище! Смотреть на них можно бесконечно.
+
+{% include image src="img_3961.jpg" %}
 
 Проехав немного дальше, мы хотели остановиться у начала маршрута, ведущего к **Glacier Point**. Это один из довольно сложных "хайков", но очень популярный и красивый.
 Однако, этому не суждено было сбыться. Припарковаться было негде. Мы поехали дальше, надеясь оставить машину с другой стороны реки Merdec, но ни на парковке у Visitor Center, ни у Yosemite Falls мест не было. К этому моменту было около 10-11 утра.
 
 В общем, мы решили не отчаиваться. Встать в воскресение пораньше и забраться на **Yosemite Falls**. А пока, поехали по Big Oak Flat Road на север. Мы ехали все дальше, долина Yosemite становилась все меньше, а облака ближе. Я не посоветую конкретных мест, но скажу, что останавливаться стоит в любом понравившемся месте (благо тут уже с парковкой проблем совсем нет).
 Мы останавливались у одного из мостов, проходящего над горной рекой, забирались под него и на камнях обедали. И скажу, что это был один из самых потрясающих обедов в моей жизни!
+{% include image src="img_3072.jpg" %}
+
 Мы ходили смотреть на сиквойи - одни из самых высоких деревьев на планете.
+{% include image src="img_3337.jpg" %}
 Мы заехали так высоко в горы, что вокруг появился снег, а голова закружилась до такой степени, что пришлось ехать обратно.
+{% include image src="img_4008.jpg" %}
 Мы встретили потрясающий закат на одной из гор... и усталые, но счастливые легли спать.
+
+{% include image src="img_3377.jpg" %}
+{% include image src="img_3994.jpg" %}
 
 Так закончился наш первый день в Yosemite.
 
@@ -62,6 +81,7 @@ images:
 А поднявшись на самый верх **Vernal Falls**, мы увидели **Nevada Falls** и **Half Dome**.
 Это были не самые простые подъемы. А спускаться было очень страшно (и скользко). Но когда видишь пожилых людей, радостно забирающихся в гору или женщин, гордо говорящих, что у них уже 7ой месяц беременности, то понимаешь, что и тебе всё ни по чем!
 
+{% include image src="img_3459.jpg" %}
 
 Если подводить итог: Yosemite потрясает. Потрясает своим масштабом, невероятными видами, природой, воздухом и энергетикой! Сюда можно приезжать очень много раз и открывать все новые и новые места!
 
@@ -76,4 +96,4 @@ images:
 
 Я оставлю здесь фотографии. Не поленитесь, посмотрите на большом экране, это передаст вам хоть немного тех ощущений!
 
-<!--{% include image src="" %}-->
+
