--- a/_posts/stories/2017-11-08-yosemite.markdown
+++ b/_posts/stories/2017-11-08-yosemite.markdown
@@ -6,47 +6,37 @@ original-date: '2017-09-21'
 comments: true
 thumbnail:
 images:
-  - img_0876.jpg
-  - img_3221.jpg
-  - img_3225.jpg
-  - img_3229.jpg
-  - img_3257.jpg
+
+  - img_3221.jpg |
+  - img_3225.jpg | El Capitan
+  - img_3229.jpg | Мы с Дашей и El Capitan
+  - img_3257.jpg | У животных приоритет
+  - img_0876.jpg | Место для обеда
   - img_3260.jpg
   - img_3273.jpg
-  - img_3284.jpg
   - img_3304.jpg
-  - img_3388.jpg
   - img_3395.jpg
-  - img_3397.jpg
-  - img_3401.jpg
-  - img_3455.jpg
-  - img_3464.jpg
-  - img_3465.jpg
+  - img_3976.jpg
+  - img_3980.jpg
   - img_3681.jpg
+  - img_3397.jpg
+  - img_3464.jpg | Обходной путь с Vernal Falls
+  - img_3465.jpg
   - img_3924.jpg
   - img_3927.jpg
   - img_3931.jpg
-  - img_3940.jpg
   - img_3947.jpg
+  - img_3940.jpg | El Capitan
   - img_3965.jpg
-  - img_3970.jpg
-  - img_3976.jpg
-  - img_3980.jpg
-  - img_3987.jpg
-  - img_3994.jpg
+  - img_3987.jpg | Вот она какая, Долина Йосемите
+  - img_3994.jpg | Секвойи
   - img_4004.jpg
   - img_4012.jpg
   - img_4016.jpg
   - img_4034.jpg
   - img_4039.jpg
-  - img_4045.jpg
-  - img_4056.jpg
-  - img_4069.jpg
-  - img_4095.jpg
-  - img_4111.jpg
-  - img_4115.jpg
   - img_7415.jpg
-  - img_8990.jpg
+  - img_4095.jpg
 ---
 Из пятидесяти девяти Американских Национальных парков, восемь расположены в Калифорнии.
 
@@ -57,25 +47,29 @@ images:
 <!--separate--> 
 {% include image src="img_3314.jpg" title="Долина Yosemite"%}
 
-Стоит заметить, что к этой поездке мы начали готовиться практически сразу после нашего переезда. Ну как готовиться? Морально!
-Мы знали, что Йосемите - обязательное место для посещения, что он потрясает, и нам обязательно туда надо съездить. Также мы знали, что главное занятие в нем - это хайкинг.
-Я долго искала, как же по-русски перевести это загадочное слово, пока на помощь не пришла Википедия. Внимание, оказывается хайкинг - это пешеходный туризм. Вот так всё просто.
-Таким образом, поездка в наш первый Национальный парк обещала быть активной.
+Стоит заметить, что к этой поездке мы начали готовиться практически сразу после нашего переезда. Ну как готовиться?
+
+Морально!
+Мы знали, что Йосемите - обязательное место для посещения, что он потрясает, и нам обязательно туда надо съездить. Также мы знали, что главное занятие там - это хайкинг.
+Я долго искала, как же по-русски перевести это загадочное слово, пока на помощь не пришла Википедия.
+
+Внимание, оказывается хайкинг - это пешеходный туризм. Вот так всё просто.
+
+Поездка в наш первый Национальный парк обещала быть активной.
 
 {% include image src="img_3990.jpg" %}
 
 Когда к нам приехала Даша, совсем недавно пробежавшая свой первый марафон, мы поняли, что лучше момента не будет. Надо брать Дашу и ехать. Так мы и сделали.
 
-Мы выехали в пятницу в 7 вечера. Ехать было около 260 километров, и к ночи мы были в гостинице. Мы остановились в *Yosemite Cedar Lodge*. Эта гостиница/мотель находится всего в 15 минутах езды до въезда в парк. На территории парка останавливаться не только безумно дорого, но еще и очень сложно: гостиницу необходимо бронировать ооочень заранее.
+Мы выехали в пятницу в 7 вечера. Ехать было около 260 километров, и к ночи мы были в гостинице. Мы остановились в *Yosemite Cedar Lodge*. Эта гостиница/мотель находится всего в 15 минутах от въезда в парк. На территории самого Yosemite останавливаться не только безумно дорого, но еще и очень сложно: гостиницу необходимо бронировать ооочень заранее.
 
 {% include image src="img_3459.jpg" %}
 
-
-Приехали мы затемно. Выйдя из машины, мы услышали журчание реки Merced River. Небо было просто усыпано звездами и слышно было сверчков. Температура тоже отличалась от привычной. Днем в Сан Франциско было около 25°C, а вечером в Yosemite 4°C. Но воздух! Воздух совершенно другой. Я совсем не жалуюсь на воздух в городе, но в Yosemite, сразу чувствуешь, что ты в горах! Хотелось просто постоять и подышать полной грудью.
+Приехали мы затемно. Выйдя из машины, мы услышали журчание реки Merced River. Небо было просто усыпано звездами и слышно было сверчков. Температура тоже отличалась от привычной. Днем в Сан Франциско было около 25°C, а вечером в Yosemite 4°C. Но воздух! Воздух совершенно другой. Я совсем не жалуюсь на воздух в городе, но в Yosemite чувствуется, что ты в горах! Хотелось просто постоять и подышать полной грудью.
 
 {% include image src="img_3222.jpg" %}
 
-Во время регистрации в гостинице мы обнаружили еще одну особенность: интернет в гостинице платный. А все это потому, что мобильная сеть там в принципе не ловит, так что о интернете речи и не могло быть. К этому мы были не готовы. Карты заранее не загрузили, родителей не предупредили. =) Так что будущие туристы - имейте в виду! Предупрежден - значит вооружен!
+Во время регистрации в гостинице мы обнаружили еще одну особенность: интернет в гостинице платный. А все потому, что мобильная сеть в принципе не ловит. К этому мы были не готовы. Карты заранее не загрузили, родителей не предупредили. =) Так что будущие туристы - готовьтесь!
 
 На следующее утро мы постарались выехать рано. На въезде в парк (*Arch Rock Entrance*) нас все-равно ждала очередь. Двигалась она довольно быстро, но лишний раз напомнила как американцы любят "пешеходный туризм".
 
@@ -94,9 +88,9 @@ images:
 
 Считается, что в результате эрозии различных горных пород, испытавших тектоническое поднятие и сопутствующих этому разломов, и появились долины, каньоны, куполовидные складки и другие формы рельефа Yosemite.
 
-{% include image src="img_4044.jpg" title="На середине пути к Yosemite Falls"%}
+{% include image src="img_4044.jpg" title="На середине подъема к Yosemite Falls"%}
 
-Оказавшись в парке в начале десятого, мы поехали по **Southside Dr**. и практически сразу увидели величественную гору **El Capitan**. Сразу захотелось посмотреть поближе и, взяв бинокль, мы увидели несколько цветных точек. Это были скалолазы. Человек 5. По, казалось бы, совершенно плоскому отвесу горы они взбирались вверх. Это, конечно, меня очень потрясло. Первый раз я увидела, как это происходит по-настоящему.
+Оказавшись в парке в начале десятого, мы поехали по **Southside Dr**. и практически сразу увидели величественную гору **El Capitan**. Захотелось посмотреть поближе и, взяв бинокль, мы увидели несколько цветных точек. Это были скалолазы. Человек 5. По, казалось бы, совершенно плоскому отвесу горы они взбирались вверх. Это, конечно, меня очень потрясло. Первый раз я увидела, как это происходит по-настоящему.
 
 {% include image src="img_3248.jpg" title="Гора El Capitan" %}
 
@@ -105,22 +99,25 @@ images:
 {% include image src="img_3961.jpg" title="Bradalveil Fall"%}
 
 Проехав немного дальше, мы хотели остановиться у начала маршрута, ведущего к **Glacier Point**. Это один из довольно сложных "хайков", но очень популярный и красивый.
-Однако, этому не суждено было сбыться. Припарковаться было негде. Мы поехали дальше, надеясь оставить машину с другой стороны реки Merdec, но ни на парковке у Visitor Center, ни у Yosemite Falls мест не было. К этому моменту было около 10-11 утра.
+Однако, этому не суждено было сбыться. Припарковаться было негде.
 
-В общем, мы решили не отчаиваться. Встать в воскресение пораньше и забраться на **Yosemite Falls**. А пока, поехали по Big Oak Flat Road на север. Мы ехали все дальше, долина Yosemite становилась все меньше, а облака ближе. Я не посоветую конкретных мест, но скажу, что останавливаться стоит в любом понравившемся месте (благо тут уже с парковкой проблем совсем нет).
-Мы останавливались у одного из мостов, проходящего над горной рекой, забирались под него и на камнях обедали. И скажу, что это был один из самых потрясающих обедов в моей жизни!
+Мы поехали дальше, надеясь оставить машину с другой стороны реки Merdec, но ни на парковке у Visitor Center, ни у Yosemite Falls мест не было.
+
+
+В общем, мы решили, что это отличная возможность осмотреть окрестности Долины. По Big Oak Flat Road мы поехали на север. Мы ехали все дальше, долина Yosemite становилась все меньше, а облака ближе. Я не посоветую конкретных мест, но скажу, что останавливаться стоит в любой понравившейся точке (благо тут уже с парковкой проблем совсем нет).
+Мы останавливались у одного из мостов, проходящего над горной рекой, забрались под него и на камнях, между которыми текла горная река, пообедали. И скажу, что это был потрясающий обед!
 {% include image src="img_3072.jpg" title="Место для обеда"%}
 
-Мы ходили смотреть на сиквойи - одни из самых высоких деревьев на планете.
+Мы ходили смотреть на секвойи - одни из самых высоких деревьев на планете.
 
 {% include image src="img_3337.jpg" %}
 {% include image src="sequoia-and-us.jpg" %}
 {% include image src="sequoia.jpg" %}
 <!-- {% include image src="img_3994.jpg" %} -->
 
-Заехали так высоко в горы, что вокруг появился снег, а голова начала кружиться до такой степени, что пришлось ехать обратно.
+Мы заехали так высоко в горы, что вокруг появился снег, а голова начала кружиться до такой степени, что пришлось возвращаться обратно.
 {% include image src="img_4008.jpg" %}
-Мы встретили потрясающий закат на одной из гор... и усталые, но счастливые легли спать.
+Мы встретили потрясающий закат на одной из гор... и уставшие, но счастливые легли спать.
 
 {% include image src="img_3377.jpg" %}
 Так закончился наш первый день в Yosemite.
@@ -132,7 +129,8 @@ images:
 Это были не самые простые подъемы. А спускаться было очень страшно (и скользко). Но когда видишь пожилых людей, радостно забирающихся в гору или женщин, гордо говорящих, что у них уже 7ой месяц беременности, то понимаешь, что и тебе всё ни по чем!
 
 {% include image src="waterfall.jpg" title="Водопад Vernal Fall"%}
-
+<!-- {% include image src="img_3401.jpg" title="Водопад Vernal Fall"%}
+{% include image src="img_3455.jpg" title="Водопад Vernal Fall"%} -->
 Если подводить итог: Yosemite потрясает. Потрясает своим масштабом, невероятными видами, природой, воздухом и энергетикой! Сюда можно приезжать очень много раз и открывать все новые и новые места!
 
 **Советы путешественникам:**
@@ -143,8 +141,8 @@ images:
 * еда! в Visitor Center есть кафешка, в которой можно покушать. Но вы не захотите быть к ней привязаны, поэтому для свободы передвижения - берите побольше еды с собой. Ну и побольше снэков. Они спасают!
 * если планируете посетить больше 2 национальных парков по всей Америке за год - берите годовой абонемент
 
-{% include image src="img_3439.jpg" %}
+{% include image src="img_3439.jpg" title="А это мы =)" %}
 
-Я оставлю ниже фотографии. Не поленитесь, посмотрите на большом экране, это передаст вам хоть немного тех ощущений!
+Я оставлю ниже фотографии. Не поленитесь, посмотрите на большом экране, это передаст вам красоту Yosemite!
 
 
