--- a/_posts/stories/2017-11-08-yosemite.markdown
+++ b/_posts/stories/2017-11-08-yosemite.markdown
@@ -4,10 +4,9 @@ title: Йосемите, наш первый Национальный Парк
 date: '2017-11-08 16:04:53 -0800'
 original-date: '2017-09-21'
 comments: true
-thumbnail:
+thumbnail: img_3314.jpg
 images:
-
-  - img_3221.jpg |
+  - img_3221.jpg
   - img_3225.jpg | El Capitan
   - img_3229.jpg | Мы с Дашей и El Capitan
   - img_3257.jpg | У животных приоритет
@@ -40,17 +39,17 @@ images:
 ---
 Из пятидесяти девяти Американских Национальных парков, восемь расположены в Калифорнии.
 
-Самым известным из них является парк, площадь которого больше 3000 км², в нём около 1200 километров пешеходных троп, 560 километров автомобильных дорог, 1400 видов растений и 300 видов животных.
+Площадь самого известного парка  больше 3000 км², в нём около 1200 километров пешеходных троп, 560 километров автомобильных дорог, 1400 видов растений и 300 видов животных.
 Это всё - Йосемите!
 
-В него мы и отправились в одни из сентябрьских выходных!
+В него мы и отправились в середине сентября.
 <!--separate--> 
 {% include image src="img_3314.jpg" title="Долина Yosemite"%}
 
-Стоит заметить, что к этой поездке мы начали готовиться практически сразу после нашего переезда. Ну как готовиться?
+Стоит заметить, что к этой поездке мы начали готовиться практически сразу после нашего переезда. Ну как готовиться? Морально.
 
-Морально!
-Мы знали, что Йосемите - обязательное место для посещения, что он потрясает, и нам обязательно туда надо съездить. Также мы знали, что главное занятие там - это хайкинг.
+
+Мы знали, что Йосемите - обязательное место для посещения, что парк потрясает, и туда обязательно стоит съездить. Также мы знали, что все едут туда на "хайкинг".
 Я долго искала, как же по-русски перевести это загадочное слово, пока на помощь не пришла Википедия.
 
 Внимание, оказывается хайкинг - это пешеходный туризм. Вот так всё просто.
@@ -59,32 +58,28 @@ images:
 
 {% include image src="img_3990.jpg" %}
 
-Когда к нам приехала Даша, совсем недавно пробежавшая свой первый марафон, мы поняли, что лучше момента не будет. Надо брать Дашу и ехать. Так мы и сделали.
+Когда к нам приехала Даша, недавно пробежавшая свой первый марафон, мы поняли, что лучше момента не будет. Надо брать Дашу и ехать. Так мы и сделали.
 
-Мы выехали в пятницу в 7 вечера. Ехать было около 260 километров, и к ночи мы были в гостинице. Мы остановились в *Yosemite Cedar Lodge*. Эта гостиница/мотель находится всего в 15 минутах от въезда в парк. На территории самого Yosemite останавливаться не только безумно дорого, но еще и очень сложно: гостиницу необходимо бронировать ооочень заранее.
+Выехав в пятницу около семи вечера, к ночи мы были в гостинице.  Дорога от Сан Франциско до Йосемите составляет около 260 километров. Мы остановились в *Yosemite Cedar Lodge*. Эта гостиница/мотель находится в 15 минутах от въезда в парк. На территории самого Yosemite останавливаться не только дорого, но еще и сложно: гостиницу необходимо бронировать ооочень заранее.
 
 {% include image src="img_3459.jpg" %}
 
-Приехали мы затемно. Выйдя из машины, мы услышали журчание реки Merced River. Небо было просто усыпано звездами и слышно было сверчков. Температура тоже отличалась от привычной. Днем в Сан Франциско было около 25°C, а вечером в Yosemite 4°C. Но воздух! Воздух совершенно другой. Я совсем не жалуюсь на воздух в городе, но в Yosemite чувствуется, что ты в горах! Хотелось просто постоять и подышать полной грудью.
+Выйдя из машины, мы услышали журчание реки Merced River. Небо было просто усыпано звездами и слышно было сверчков. Температура тоже отличалась от привычной. Днем в Сан Франциско было около 25°C, а вечером в Yosemite - 4°C. Но воздух! Воздух совершенно другой. Я не жалуюсь на воздух в городе, но в Yosemite чувствуется, что это горы. Хотелось просто стоять, дышать полной грудью и искать созвездия.
 
 {% include image src="img_3222.jpg" %}
 
-Во время регистрации в гостинице мы обнаружили еще одну особенность: интернет в гостинице платный. А все потому, что мобильная сеть в принципе не ловит. К этому мы были не готовы. Карты заранее не загрузили, родителей не предупредили. =) Так что будущие туристы - готовьтесь!
+Регистрируясь в гостинице, мы обнаружили что интернет не работает, и мобильная сеть в принципе не ловит. К этому мы не подготовились. Карты заранее не загрузили, родителей не предупредили. =) Так что будущие туристы - готовьтесь тщательнее.
 
-На следующее утро мы постарались выехать рано. На въезде в парк (*Arch Rock Entrance*) нас все-равно ждала очередь. Двигалась она довольно быстро, но лишний раз напомнила как американцы любят "пешеходный туризм".
+На следующее утро мы постарались выехать рано. На въезде в парк *Arch Rock Entrance*все-равно ждала очередь. Двигалась она довольно быстро, но лишний раз напомнила как американцы любят всей семьей поехать в парк и заняться "пешеходным туризмом".
 
 {% include image src="img_3956.jpg" %}
-
-Выше я упоминала невероятные размеры Национального парка. Долина Йосемите занимает только один процент от общей территории всего Йосемите, однако, именно туда стекается большинство посетителей. И мы оказались в их числе.
-
-На этом одном проценте территории расположилось такое количество гор, водопадов и водоемов, что и за два дня их не посмотреть.
 
 {% include image src="img_4010.jpg" title="Закат в Yosemite"%}
 
 Если немного углубиться в историю, то считается, что первые живые существа появились здесь около 3000 лет назад. А первые люди - от 8000 до 10000 лет назад.
 До того, как на этой территории появились первые европейцы, здесь жили индейские племена сьерра-мивок и паюты. Ко времени прихода сюда первых поселенцев, в долине Йосемити обитала группа индейцев, называвшая себя аваничи (Ahwahnechee)
 
-Только в 1984 году парк получил статус «Всемирного наследия» под эгидой ЮНЕСКО. С самого начала он был задуман именно как национальный парк. Среди его организаторов — один из первых защитников идеи заповедников Джон Мьюр. Чрезмерный выпас скота на пастбищах вырубка деревьев Секвой и другая деятельность в ущерб природе вынудили Джона Мьюра выступить с идеей ужесточения условий охраны этой территории. 1 октября 1890 года Конгресс дал парку статус национального. Мьюр также убедил местные власти не пасти скот в альпийских лугах.
+Только в 1984 году парк получил статус «Всемирного наследия» под эгидой ЮНЕСКО. С самого начала он был задуман как национальный парк. Среди его организаторов — один из первых защитников идеи заповедников Джон Мьюр. Чрезмерный выпас скота на пастбищах вырубка деревьев Секвой и другая деятельность в ущерб природе вынудили Джона Мьюра выступить с идеей ужесточения условий охраны этой территории. 1 октября 1890 года Конгресс дал парку статус национального. Мьюр также убедил местные власти не пасти скот в альпийских лугах.
 
 Считается, что в результате эрозии различных горных пород, испытавших тектоническое поднятие и сопутствующих этому разломов, и появились долины, каньоны, куполовидные складки и другие формы рельефа Yosemite.
 
@@ -94,18 +89,21 @@ images:
 
 {% include image src="img_3248.jpg" title="Гора El Capitan" %}
 
-По другую сторону от El Capitan мы увидели наш первый водопад в Yosemite - **Bradalveil Fall**. Очень романтичное название, переводится как "Фата невесты". Водопады - это, конечно, завораживающее зрелище! Смотреть на них можно бесконечно.
+По другую сторону от El Capita расположился водопад **Bradalveil Fall**. Очень романтичное название, переводится как "Фата невесты". Водопады - это завораживающее зрелище! Смотреть на них можно бесконечно.
 
 {% include image src="img_3961.jpg" title="Bradalveil Fall"%}
 
-Проехав немного дальше, мы хотели остановиться у начала маршрута, ведущего к **Glacier Point**. Это один из довольно сложных "хайков", но очень популярный и красивый.
+Проехав дальше, мы хотели остановиться у начала маршрута, ведущего к **Glacier Point**. Это сложный "хайк", но очень популярный и красивый.
 Однако, этому не суждено было сбыться. Припарковаться было негде.
 
 Мы поехали дальше, надеясь оставить машину с другой стороны реки Merdec, но ни на парковке у Visitor Center, ни у Yosemite Falls мест не было.
 
+Я упоминала невероятные размеры Национального парка. Долина Йосемите занимает только один процент от общей территории всего Йосемите, однако, именно туда стекается большинство посетителей. С этим и связаны проблемы с парковкой.
 
-В общем, мы решили, что это отличная возможность осмотреть окрестности Долины. По Big Oak Flat Road мы поехали на север. Мы ехали все дальше, долина Yosemite становилась все меньше, а облака ближе. Я не посоветую конкретных мест, но скажу, что останавливаться стоит в любой понравившейся точке (благо тут уже с парковкой проблем совсем нет).
-Мы останавливались у одного из мостов, проходящего над горной рекой, забрались под него и на камнях, между которыми текла горная река, пообедали. И скажу, что это был потрясающий обед!
+Мы решили, что отсутствие парковки - отличная возможность осмотреть окрестности Долины. Тем более, что в Yosemite такое количество гор, водопадов и водоемов, что за два дня их не посмотреть.
+
+По Big Oak Flat Road мы поехали на север. Мы ехали все дальше, долина Yosemite становилась все меньше, а облака ближе. Я не посоветую конкретных мест. Останавливаться стоит в любой понравившейся точке (благо тут уже с парковкой проблем совсем нет).
+Мы останавливались у моста, проходящего над горной рекой, забрались под него и на камнях, между которыми текла горная река, обедали. Это был немного захватывающий обед!
 {% include image src="img_3072.jpg" title="Место для обеда"%}
 
 Мы ходили смотреть на секвойи - одни из самых высоких деревьев на планете.
@@ -115,34 +113,34 @@ images:
 {% include image src="sequoia.jpg" %}
 <!-- {% include image src="img_3994.jpg" %} -->
 
-Мы заехали так высоко в горы, что вокруг появился снег, а голова начала кружиться до такой степени, что пришлось возвращаться обратно.
+Мы заехали так высоко в горы, что вокруг появился снег, а голова стала кружиться до такой степени, что пришлось возвращаться обратно.
 {% include image src="img_4008.jpg" %}
 Мы встретили потрясающий закат на одной из гор... и уставшие, но счастливые легли спать.
 
 {% include image src="img_3377.jpg" %}
 Так закончился наш первый день в Yosemite.
 
-В воскресение мы приехали в парк рано и припарковали машину! Ура!
+В воскресение, приехав в парк рано, мы припарковали машину! Ура!
 
-За один день по покорили две горы. Ну или почти покорили =) Мы поднялись до середины **Yosemite Fall**, откуда нам открылся вид на El Capitan и всю долину Yosemite.
-А поднявшись на самый верх **Vernal Falls**, мы увидели **Nevada Falls** и **Half Dome**.
-Это были не самые простые подъемы. А спускаться было очень страшно (и скользко). Но когда видишь пожилых людей, радостно забирающихся в гору или женщин, гордо говорящих, что у них уже 7ой месяц беременности, то понимаешь, что и тебе всё ни по чем!
+За один день мы по покорили две горы. Ну или почти покорили =) Поднялись до середины **Yosemite Fall**, откуда  открылся вид на El Capitan и всю Долину Yosemite.
+А поднявшись на самый верх **Vernal Falls**, увидели **Nevada Falls** и **Half Dome**.
+Это были не самые простые подъемы. А спускаться было очень страшно и скользко. Но когда видишь пожилых людей, радостно забирающихся в гору или женщин, гордо говорящих, что у них уже 7-ой месяц беременности, то понимаешь, что и тебе всё ни по чем.
 
 {% include image src="waterfall.jpg" title="Водопад Vernal Fall"%}
 <!-- {% include image src="img_3401.jpg" title="Водопад Vernal Fall"%}
 {% include image src="img_3455.jpg" title="Водопад Vernal Fall"%} -->
-Если подводить итог: Yosemite потрясает. Потрясает своим масштабом, невероятными видами, природой, воздухом и энергетикой! Сюда можно приезжать очень много раз и открывать все новые и новые места!
+Если подводить итог: Yosemite потрясает. Потрясает масштабом, невероятными видами, природой, воздухом и энергетикой. Сюда стоит приезжать  много раз и открывать всё новые и новые места!
 
 **Советы путешественникам:**
 * позаботьтесь об офлайн картах заранее
-* приезжайте в парк как можно раньше (9-10 утра - это уже поздно). C парковкой у Yosemite Falls, Glacier point и Visitor Center в такое время уже могут быть проблемы.
-* удобная и не сколькая обувь обязательна! если есть проблемы с коленями, то лучше взять с собой наколенники, спуски с гор могут быть очень резким и и длинными. Берегите ноги!
+* приезжайте в парк как можно раньше (9-10 утра - это уже поздно). C парковкой у Yosemite Falls, Glacier point и Visitor Center в такое время будут сложности.
+* удобная и не сколькая обувь обязательна! если проблемы с коленями, то лучше взять с собой наколенники, спуски с гор могут быть очень резким и длинными. Берегите ноги!
 * здесь сильно прохладнее, чем в Сан Франциско. Если днем на солнце и будет очень жарко, то к вечеру вы почувствуете настоящий холод. Берите побольше одежды с собой.
-* еда! в Visitor Center есть кафешка, в которой можно покушать. Но вы не захотите быть к ней привязаны, поэтому для свободы передвижения - берите побольше еды с собой. Ну и побольше снэков. Они спасают!
+* еда! в Visitor Center есть кафешка, в которой можно покушать. Но вы не захотите быть к ней привязаны, поэтому для свободы передвижения - берите побольше еды с собой. Ну и побольше снэков, ни спасают.
 * если планируете посетить больше 2 национальных парков по всей Америке за год - берите годовой абонемент
 
 {% include image src="img_3439.jpg" title="А это мы =)" %}
 
 Я оставлю ниже фотографии. Не поленитесь, посмотрите на большом экране, это передаст вам красоту Yosemite!
 
-
+И я буду очень ждать ваши комментарии и идеи для наших новых путешествий!
