--- a/_posts/stories/2017-11-10-yosemite.markdown
+++ b/_posts/stories/2017-11-10-yosemite.markdown
@@ -28,7 +28,6 @@ images:
   - img_3947.jpg
   - img_3965.jpg
   - img_3987.jpg | Вот она какая, Долина Йосемите
-  - img_3994.jpg | Секвойи
   - img_4004.jpg
   - img_4012.jpg
   - img_4016.jpg
@@ -74,8 +73,6 @@ images:
 
 {% include image src="img_3956.jpg" %}
 
-{% include image src="img_4010.jpg" title="Закат в Yosemite"%}
-
 Если немного углубиться в историю, то считается, что первые живые существа появились здесь около 3000 лет назад. А первые люди - от 8000 до 10000 лет назад.
 До того, как на этой территории появились первые европейцы, здесь жили индейские племена сьерра-мивок и паюты. Ко времени прихода сюда первых поселенцев, в долине Йосемити обитала группа индейцев, называвшая себя аваничи (Ahwahnechee)
 
@@ -100,6 +97,8 @@ images:
 
 Я упоминала невероятные размеры Национального парка. Долина Йосемите занимает только один процент от общей территории всего Йосемите, однако, именно туда стекается большинство посетителей. С этим и связаны проблемы с парковкой.
 
+{% include image src="img_4010.jpg" title="Закат в Yosemite"%}
+
 Мы решили, что отсутствие парковки - отличная возможность осмотреть окрестности Долины. Тем более, что в Yosemite такое количество гор, водопадов и водоемов, что за два дня их не посмотреть.
 
 По Big Oak Flat Road мы поехали на север. Мы ехали все дальше, долина Yosemite становилась все меньше, а облака ближе. Я не посоветую конкретных мест. Останавливаться стоит в любой понравившейся точке (благо тут уже с парковкой проблем совсем нет).
@@ -108,10 +107,7 @@ images:
 
 Мы ходили смотреть на секвойи - одни из самых высоких деревьев на планете.
 
-{% include image src="img_3337.jpg" %}
-{% include image src="sequoia-and-us.jpg" %}
-{% include image src="sequoia.jpg" %}
-<!-- {% include image src="img_3994.jpg" %} -->
+{% include image src="img_3994.jpg" title="Секвойи" %}
 
 Мы заехали так высоко в горы, что вокруг появился снег, а голова стала кружиться до такой степени, что пришлось возвращаться обратно.
 {% include image src="img_4008.jpg" %}
@@ -127,8 +123,7 @@ images:
 Это были не самые простые подъемы. А спускаться было очень страшно и скользко. Но когда видишь пожилых людей, радостно забирающихся в гору или женщин, гордо говорящих, что у них уже 7-ой месяц беременности, то понимаешь, что и тебе всё ни по чем.
 
 {% include image src="waterfall.jpg" title="Водопад Vernal Fall"%}
-<!-- {% include image src="img_3401.jpg" title="Водопад Vernal Fall"%}
-{% include image src="img_3455.jpg" title="Водопад Vernal Fall"%} -->
+
 Если подводить итог: Yosemite потрясает. Потрясает масштабом, невероятными видами, природой, воздухом и энергетикой. Сюда стоит приезжать  много раз и открывать всё новые и новые места!
 
 **Советы путешественникам:**
