--- a/_posts/stories/2017-11-10-yosemite.markdown
+++ b/_posts/stories/2017-11-10-yosemite.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Йосемите, наш первый Национальный Парк
+title: Великий Йосемите
 date: '2017-11-10 16:04:53 -0800'
 original-date: '2017-09-21'
 comments: true
