changed post title and quotes

--- a/_posts/stories/2017-11-10-yosemite.markdown
+++ b/_posts/stories/2017-11-10-yosemite.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Великий Йосемите
+title: Прекрасные горы, водопады и реки Йосемите
 date: '2017-11-10 16:04:53 -0800'
 original-date: '2017-09-21'
 comments: true
@@ -72,10 +72,10 @@ images:
 
 {% include image src="img_3956.jpg" %}
 
-Если немного углубиться в историю, то считается, что первые живые существа появились здесь около 3000 лет назад. А первые люди - от 8000 до 10000 лет назад.
-До того, как на этой территории появились первые европейцы, здесь жили индейские племена сьерра-мивок и паюты. Ко времени прихода сюда первых поселенцев, в долине Йосемити обитала группа индейцев, называвшая себя аваничи (Ahwahnechee)
+>Если немного углубиться в историю, то считается, что первые люди на территории Yosemite могли быть 8000-10000 лет назад.
+>До того, как на этой территории появились первые европейцы, здесь жили индейские племена сьерра-мивок и паюты. Ко времени прихода сюда первых поселенцев, в долине Йосемити обитала группа индейцев, называвшая себя аваничи (Ahwahnechee)
 
-Только в 1984 году парк получил статус «Всемирного наследия» под эгидой ЮНЕСКО. С самого начала он был задуман как национальный парк. Среди его организаторов — один из первых защитников идеи заповедников Джон Мьюр. Чрезмерный выпас скота на пастбищах вырубка деревьев Секвой и другая деятельность в ущерб природе вынудили Джона Мьюра выступить с идеей ужесточения условий охраны этой территории. 1 октября 1890 года Конгресс дал парку статус национального. Мьюр также убедил местные власти не пасти скот в альпийских лугах.
+>Только в 1984 году парк получил статус «Всемирного наследия» под эгидой ЮНЕСКО. С самого начала он был задуман как национальный парк. Среди его организаторов — один из первых защитников идеи заповедников Джон Мьюр. Чрезмерный выпас скота на пастбищах вырубка деревьев Секвой и другая деятельность в ущерб природе вынудили Джона Мьюра выступить с идеей ужесточения условий охраны этой территории. 1 октября 1890 года Конгресс дал парку статус национального. Мьюр также убедил местные власти не пасти скот в альпийских лугах.
 
 Считается, что в результате эрозии различных горных пород, испытавших тектоническое поднятие и сопутствующих этому разломов, и появились долины, каньоны, куполовидные складки и другие формы рельефа Yosemite.
 
